--- a/yournotez/angular.json
+++ b/yournotez/angular.json
@@ -31,6 +31,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/notes/",
               "budgets": [
                 {
                   "type": "initial",
